assets/css/zelda-botw.css
/* ... */
button.with-icon.colored.icon1:before{background-position:-16px -32px}
button.with-icon.colored.icon2:before{background-position:-32px -32px}
button.with-icon.colored.icon3:before{background-position:-48px -32px}
button.with-icon.colored.icon4:before{background-position:-64px -32px}
button.with-icon.colored.icon5:before{background-position:-80px -32px}
button.with-icon.colored.icon6:before{background-position:-96px -32px}
button.with-icon.colored.icon7:before{background-position:-112px -32px}
button.with-icon.colored.icon8:before{background-position:-128px -32px}
button.with-icon.colored.icon9:before{background-position:-144px -32px}
button.with-icon.colored.icon10:before{background-position:-160px -32px}
span.icon.icon0,button.with-icon.transparent.icon0:before{background-position:-0px 0px}
span.icon.icon1,button.with-icon.transparent.icon1:before{background-position:-16px 0px}
span.icon.icon2,button.with-icon.transparent.icon2:before{background-position:-32px 0px}
span.icon.icon3,button.with-icon.transparent.icon3:before{background-position:-48px 0px}
span.icon.icon4,button.with-icon.transparent.icon4:before{background-position:-64px 0px}
span.icon.icon5,button.with-icon.transparent.icon5:before{background-position:-80px 0px}
span.icon.icon6,button.with-icon.transparent.icon6:before{background-position:-96px 0px}
span.icon.icon7,button.with-icon.transparent.icon7:before{background-position:-112px 0px}
span.icon.icon8,button.with-icon.transparent.icon8:before{background-position:-128px 0px}
span.icon.icon9,button.with-icon.transparent.icon9:before{background-position:-144px 0px}
span.icon.icon10,button.with-icon.transparent.icon10:before{background-position:-160px 0px}
span.sprite{width:24px;height:24px}
span.sprite.github{background-position:0px -48px;width:16px;height:16px; margin-right:5px}
span.sprite.heart{background-position:-16px -48px;width:16px;height:16px; margin-right:5px}
button.with-icon.file-load:before{background-position:-32px -48px;width:20px;height:20px; margin-right:8px}














/* header+toolbar+footer */
#header{
	color:#333;
	position:fixed;
	top:-144px;
	left:0;
	width:100%;
	z-index:100;
	background-color:#faf8f7;
}
#header:after{
	display:block;
	position:absolute;
	bottom:-3px;
	left:0;
	width:100%;
	height:3px;
	background-image:linear-gradient(to right, #0f0404 0%, #b99f65 40%, #b99f65 40%, #b99f65 65%, #0f0404 100%);

	content:"";
}
#toolbar{
	padding:8px
}
#span-version:hover{text-decoration:underline}
#header h1{display:inline-block;font-size:110%;margin:0;flex:1;color:#333}
#header h1 img{vertical-align:middle}



.header-buttons{
	font-size:85%
}
.header-buttons a.author{
	color:#333;
	text-decoration:none;
	border-bottom:1px solid #d3cec3;
	margin-right:10px
}
.header-buttons a.author:hover{
	border-color:#83d8ff
}
.header-buttons a.button{
	text-decoration:none;
	color:white;
	background-color:#1a415d;
	padding:10px 20px;
	border-radius:3px
}
.header-buttons a.button:hover{
	background-color:#153044
}

.donate.button{
	background-color:#51a451 !important;

	/*text-shadow:0 -1px 0 #37a137 !important;
	background:radial-gradient(#60bd60,#398a39);*/
	animation:donateglow 2s infinite
}
.donate.button:hover{background-color:#3e903e !important}
@keyframes donateglow{
	0%{box-shadow:none}
	50%{box-shadow:#d8ff7c 0 0 8px inset}
	100%{box-shadow:none}
}




hr{border:none;border-top:1px dotted #bbb;margin:15px 0}
h3{
	border-bottom:2px solid #888;
	font-size:135%;
	padding:10px 0;
	text-transform:uppercase;
	color:#b99f65
}

table{width:100%}
tbody tr:nth-child(even){background-color:#f2f2f2}
th{background-color:#d4d4d4}




/* forms */
input[type=text],input[type=number],select{
	padding:6px 8px;
	width:250px;
	max-width:90%;
	font:100% 'Open Sans', sans-serif;
	border:1px solid #888;
	border-radius:2px;
	box-sizing:border-box
}
input[type=text]:hover,input[type=number]:hover,select:hover{
	border-color:#666
}
input[type=text]:focus,input[type=number]:focus,select:focus{
	box-shadow:#63bce5 0 0 4px 1px;
	border-color:#47a8df
}
input[type=text].error,input[type=number].error,select.error{
	box-shadow:#f88 0 0 4px 1px;
	border-color:red
}
input[type=text].small,input[type=number].small,select.small{width:70px}
input[type=text].medium,input[type=number].medium,select.medium{width:130px}
.full-width{width:100% !important;max-width:100% !important}
optgroup{background-color:black}

#the-viewer input[type=text],#the-viewer input[type=number],#the-viewer select{
	border:1px solid #444;
	border-radius:2px;
	background-color:#111;
	color:white;
}
#the-viewer input[type=text]:hover,#the-viewer input[type=number]:hover,#the-viewer select:hover{
	border-color:#666
}
#the-viewer input[type=text]:focus,#the-viewer input[type=number]:focus,#the-viewer select:focus{
	box-shadow:rgba(185,159,101,.5) 0 0 4px 1px;
	background-color:#222;
	border-color:#b99f65
}





/* buttons */
button{
	font-family:inherit;
	font-size:100%;
	min-width:120px;
	border-radius:2px;border:1px solid;border-color:#ccc #ccc #b3b3b3;

	padding:6px 12px;
	margin:0 5px;

	background-color:#f0f0f0;
	background-image:linear-gradient(to bottom, #fff, #e6e6e6);
	text-shadow:0 1px 0 #f8f8f8;
	color:#333;

	box-shadow:0px 1px 0px rgba(255, 255, 255, 0.2) inset;
	transition:border-color ease-in-out .15s;

	box-sizing:border-box
}
button.small{
	min-width:1px
}
button:hover{
	text-shadow:none;
	border-color:#999999
}
button:active{
	background-image:none;
	transform:translate(0px,1px);
	border-color:#888;
	text-shadow:none;

	box-shadow:0 2px 8px -3px rgba(0, 0, 0, 0.5) inset;
	background-color:#eeeeee;
	transform:translateY(1px)
}
button:focus{}
button:disabled{opacity:.35}

button.colored{color:white !important}
button.colored.blue{
	box-shadow:0 1px 0 rgba(120, 200, 230, 0.5) inset;
	background-color:#21759B;
	background-image:linear-gradient(to bottom, #2A95C5, #21759B);
	border-color:#21759B #21759B #1E6A8D;
	text-shadow:0 -1px 0 #20749a
}
/* ... */

